--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.TravelBox"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.view.home.FilterActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.view.home.DetailPostActivity"
             android:exported="false" />
         <activity
