--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TravelBox"
         tools:targetApi="31">
-        <activity
-            android:exported="false" />
+
         <activity
             android:name=".presentation.view.home.DetailPostActivity"
             android:exported="false" />
@@ -29,6 +28,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".presentation.view.user.LoginActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".presentation.view.user.SignupActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".presentation.view.user.SignUpSuccessActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".presentation.view.home.FilterActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
