--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".presentation.view.calendar.ScheduleActivity"
+            android:exported="true"
+            android:theme="@style/Theme.TravelBox"/>
+
+
     </application>
 
 </manifest>
