--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".presentation.view.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.view.user.LoginActivity"
+            android:name=".presentation.view.IntroActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,6 +27,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".presentation.view.user.LoginActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".presentation.view.user.SignupActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".presentation.view.user.SignUpSuccessActivity"
+            android:exported="true" />
+
+        <activity
+            android:name=".presentation.view.home.FilterActivity"
+            android:exported="false" />
+
         <activity
             android:name=".presentation.view.calendar.ScheduleActivity"
             android:exported="true"
